--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "main": "src/main.js",
   "scripts": {
     "build": "tsc",
-    "start": "node src/main.js"
+    "start": "node build/main.js --port=$PORT"
   },
   "keywords": [],
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.14.8",
-    "typescript": "^5.5.2"
+    "@types/node": "^20.14.8"
   },
   "dependencies": {
+    "typescript": "^5.5.2",
     "express": "^4.19.2"
   }
 }
